grid-flex_upd_code_view

--- a/flexbox.html
+++ b/flexbox.html
@@ -31,30 +31,30 @@
 			</ul>
 		</nav>
 
-		<template id="popup_template">
-			<div class="popup_code" id="popup_code_inner">
+		<template id="popup_template_grid">
+			<div class="popup_code" id="popup_code_inner_grid">
 			  <div class="article_header">
 				<h2>Código para melhor visualização</h2>
-				<span class="close" onclick="close_popup()">&times;</span>
+				<span class="close" onclick="close_popup_grid()">&times;</span>
 			  </div>
-			  <label id="example_title"></label>
+			  <label id="example_title_grid"></label>
 			  <div class="popup_code_content">
 				<code class="language-css">
-				  <p>.flex-container {</p>
-				  <ul class="code-list" id="code_list">
+				  <p>.grid-container {</p>
+				  <ul class="code-list" id="code_list_grid">
 					<!-- Itens serão adicionados via JS -->
 				  </ul>
 				  }
 				</code>
 			  </div>
 			  <p>
-				Este código é atualizado conforme você utiliza a exemplo interativo.
+				Este código é atualizado conforme você utiliza o exemplo interativo.
 			  </p>
 			</div>
 		  </template>
 		  
 		  <!-- Local onde o popup será exibido -->
-		  <div id="popup_code_container"></div>
+		  <div id="popup_code_container_grid"></div>
 
 		<main>
 			<section>
