--- a/grid.html
+++ b/grid.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="styles.css" />
 		<link
 			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 	</head>
 	<body>
 		<header>
@@ -30,6 +30,29 @@
 				<li><a href="flexbox.html">CSS Flexbox</a></li>
 			</ul>
 		</nav>
+
+		<template id="popup_template_grid">
+			<div class="popup_code" id="popup_code_inner_grid">
+				<div class="article_header">
+					<h2>Código para melhor visualização</h2>
+					<span class="close" onclick="close_popup_grid()">&times;</span>
+				</div>
+				<label id="example_title_grid"></label>
+				<div class="popup_code_content">
+					<code class="language-css">
+						<p>.grid-container {</p>
+						<ul class="code-list" id="code_list_grid"></ul>
+						}
+					</code>
+				</div>
+				<p>
+					Este código é atualizado conforme você utiliza o exemplo interativo.
+				</p>
+			</div>
+		</template>
+
+		<div id="popup_code_container_grid"></div>
+
 		<main>
 			<section>
 				<h2>O que é o CSS Grid?</h2>
@@ -66,13 +89,16 @@
 				<h2>Como aplicar no seu projeto?</h2>
 				<p>
 					Para utilizar o CSS Grid em seus projetos, você deve definir a
-					propriedade <code>display: grid;</code> no contêiner pai (Grid
-					Container). A partir daí, você pode usar as propriedades do Grid para
-					criar colunas, linhas e posicionar os itens de forma precisa.
+					propriedade
+					<code>display: grid;</code> no contêiner pai (Grid Container). A
+					partir daí, você pode usar as propriedades do Grid para criar colunas,
+					linhas e posicionar os itens de forma precisa.
 				</p>
 
 				<figure>
-					<img src="imgs/grid_container.png" alt="Código para usar o flexbox" />
+					<img
+						src="imgs/grid_container.png"
+						alt="Código para usar o CSS Grid" />
 				</figure>
 
 				<h2>Terminologia Essencial</h2>
@@ -113,92 +139,146 @@
 					</li>
 					<li>
 						<strong><code>fr</code> (Fraction):</strong> A unidade fr representa
-						uma fração do espaço disponível no contêiner de grid. Ela é usada
-						para dividir o espaço restante entre as colunas ou linhas de forma
-						proporcional.
+						uma fração do espaço disponível no contêiner de grid.
 					</li>
 				</ul>
 
+				<div class="section-examples">
+					<article>
+						<div class="article_header">
+							<h2>Exemplo de CSS Grid Columns</h2>
+							<button onclick="open_popup_grid('gridContainer')">
+								<i class="fa-solid fa-laptop-code" style="color: #fff"></i>
+							</button>
+						</div>
 
-				<article>
-					<h2>Exemplo de CSS Grid</h2>
-					<div class="grid-container" id="gridContainer">
-						<div class="grid-item">1</div>
-						<div class="grid-item">2</div>
-						<div class="grid-item">3</div>
-						<div class="grid-item">4</div>
-					</div>
-					<label for="columns">Grid Columns:</label>
-					<input type="text" id="columns" placeholder="Ex: 1fr 2fr" />
-					<button onclick="updateGrid()">Aplicar</button>
-				
-					<label for="gapColumns">Gap:</label>
-					<input type="text" id="gapColumns" placeholder="Ex: 10px" />
-					<button onclick="updateGridGap()">Aplicar Gap</button>
-				</article>
+						<div class="grid-container" id="gridContainer">
+							<div class="grid-item">1</div>
+							<div class="grid-item">2</div>
+							<div class="grid-item">3</div>
+							<div class="grid-item">4</div>
+						</div>
 
-				<article>
-					<h2>Exemplo de CSS Grid Rows</h2>
-					<div class="grid-container" id="gridContainerRows">
-						<div class="grid-item">1</div>
-						<div class="grid-item">2</div>
-						<div class="grid-item">3</div>
-						<div class="grid-item">4</div>
-					</div>
-					<label for="rows">Grid Rows:</label>
-					<input type="text" id="rows" placeholder="Ex: 1fr 2fr" />
-					<button onclick="updateGridRows()">Aplicar</button>
+						<label for="columns">Grid Columns:</label>
+						<input type="text" id="columns" placeholder="Ex: 1fr 2fr" />
+						<button onclick="updateGrid()">Aplicar</button>
 
-					<label for="gapRows">Gap:</label>
-					<input type="text" id="gapRows" placeholder="Ex: 10px" />
-					<button onclick="updateGridRowsGap()">Aplicar Gap</button>
-				</article>
+						<label for="gapColumns">Gap:</label>
+						<input type="text" id="gapColumns" placeholder="Ex: 10px" />
+						<button onclick="updateGridGap()">Aplicar Gap</button>
+					</article>
 
-				<article>
-					<h2>Exemplo de CSS Grid Completo</h2>
-					<div class="grid-container" id="gridContainerComplete">
-						<div class="grid-item">1</div>
-						<div class="grid-item">2</div>
-						<div class="grid-item">3</div>
-						<div class="grid-item">4</div>
-						<div class="grid-item">5</div>
-						<div class="grid-item">6</div>
-					</div>
+					<article>
+						<div class="article_header">
+							<h2>Exemplo de CSS Grid Rows</h2>
+							<button onclick="open_popup_grid('gridContainerRows')">
+								<i class="fa-solid fa-laptop-code" style="color: #fff"></i>
+							</button>
+						</div>
 
-					<div class="inputs-examples">
-						<label for="gapComplete">Grid Columns:</label>
-						<label for="gapComplete">Grid Rows:</label>
-						<label for="gapComplete">Gap:</label>
+						<div class="grid-container" id="gridContainerRows">
+							<div class="grid-item">1</div>
+							<div class="grid-item">2</div>
+							<div class="grid-item">3</div>
+							<div class="grid-item">4</div>
+						</div>
 
-						<input type="text" id="columnsComplete" placeholder="Ex: 1fr 2fr" />
-						<input type="text" id="rowsComplete" placeholder="Ex: 1fr 2fr" />
-						<input type="text" id="gapComplete" placeholder="Ex: 10px" />
+						<label for="rows">Grid Rows:</label>
+						<input type="text" id="rows" placeholder="Ex: 1fr 2fr" />
+						<button onclick="updateGridRows()">Aplicar</button>
 
-						<button onclick="updateGridCompleteColumns()">Aplicar Columns</button>
-						<button onclick="updateGridCompleteRows()">Aplicar Rows</button>
-						<button onclick="updateGridCompleteGap()">Aplicar Gap</button>
-					</div>
-				</article>
+						<label for="gapRows">Gap:</label>
+						<input type="text" id="gapRows" placeholder="Ex: 10px" />
+						<button onclick="updateGridRowsGap()">Aplicar Gap</button>
+					</article>
+
+					<article>
+						<div class="article_header">
+							<h2>Exemplo Completo</h2>
+							<button onclick="open_popup_grid('gridContainerComplete')">
+								<i class="fa-solid fa-laptop-code" style="color: #fff"></i>
+							</button>
+						</div>
+
+						<div class="grid-container" id="gridContainerComplete">
+							<div class="grid-item">1</div>
+							<div class="grid-item">2</div>
+							<div class="grid-item">3</div>
+							<div class="grid-item">4</div>
+							<div class="grid-item">5</div>
+							<div class="grid-item">6</div>
+						</div>
+
+						<div class="inputs-examples">
+							<label for="columnsComplete">Grid Columns:</label>
+							<label for="rowsComplete">Grid Rows:</label>
+							<label for="gapComplete">Gap:</label>
+
+							<input
+								type="text"
+								id="columnsComplete"
+								placeholder="Ex: 1fr 2fr" />
+							<input type="text" id="rowsComplete" placeholder="Ex: 1fr 2fr" />
+							<input type="text" id="gapComplete" placeholder="Ex: 10px" />
+
+							<button onclick="updateGridCompleteColumns()">
+								Aplicar Columns
+							</button>
+							<button onclick="updateGridCompleteRows()">Aplicar Rows</button>
+							<button onclick="updateGridCompleteGap()">Aplicar Gap</button>
+						</div>
+					</article>
+				</div>
 			</section>
 		</main>
 
 		<footer>
 			<figure>
-			<p>
-				<a href="https://www.linkedin.com/in/arthur-bressan-silva/"><svg class="icon_footer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg></a>
-			</p>
-			<p>
-				<a href="https://github.com/Arthur-Bressan"><svg class="icon_footer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM265.8 407.7c0-1.8 0-6 .1-11.6c.1-11.4 .1-28.8 .1-43.7c0-15.6-5.2-25.5-11.3-30.7c37-4.1 76-9.2 76-73.1c0-18.2-6.5-27.3-17.1-39c1.7-4.3 7.4-22-1.7-45c-13.9-4.3-45.7 17.9-45.7 17.9c-13.2-3.7-27.5-5.6-41.6-5.6s-28.4 1.9-41.6 5.6c0 0-31.8-22.2-45.7-17.9c-9.1 22.9-3.5 40.6-1.7 45c-10.6 11.7-15.6 20.8-15.6 39c0 63.6 37.3 69 74.3 73.1c-4.8 4.3-9.1 11.7-10.6 22.3c-9.5 4.3-33.8 11.7-48.3-13.9c-9.1-15.8-25.5-17.1-25.5-17.1c-16.2-.2-1.1 10.2-1.1 10.2c10.8 5 18.4 24.2 18.4 24.2c9.7 29.7 56.1 19.7 56.1 19.7c0 9 .1 21.7 .1 30.6c0 4.8 .1 8.6 .1 10c0 4.3-3 9.5-11.5 8C106 393.6 59.8 330.8 59.8 257.4c0-91.8 70.2-161.5 162-161.5s166.2 69.7 166.2 161.5c.1 73.4-44.7 136.3-110.7 158.3c-8.4 1.5-11.5-3.7-11.5-8zm-90.5-54.8c-.2-1.5 1.1-2.8 3-3.2c1.9-.2 3.7 .6 3.9 1.9c.3 1.3-1 2.6-3 3c-1.9 .4-3.7-.4-3.9-1.7zm-9.1 3.2c-2.2 .2-3.7-.9-3.7-2.4c0-1.3 1.5-2.4 3.5-2.4c1.9-.2 3.7 .9 3.7 2.4c0 1.3-1.5 2.4-3.5 2.4zm-14.3-2.2c-1.9-.4-3.2-1.9-2.8-3.2s2.4-1.9 4.1-1.5c2 .6 3.3 2.1 2.8 3.4c-.4 1.3-2.4 1.9-4.1 1.3zm-12.5-7.3c-1.5-1.3-1.9-3.2-.9-4.1c.9-1.1 2.8-.9 4.3 .6c1.3 1.3 1.8 3.3 .9 4.1c-.9 1.1-2.8 .9-4.3-.6zm-8.5-10c-1.1-1.5-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3c1.1 1.5 1.1 3.3 0 4.1c-.9 .6-2.6 0-3.7-1.5zm-6.3-8.8c-1.1-1.3-1.3-2.8-.4-3.5c.9-.9 2.4-.4 3.5 .6c1.1 1.3 1.3 2.8 .4 3.5c-.9 .9-2.4 .4-3.5-.6zm-6-6.4c-1.3-.6-1.9-1.7-1.5-2.6c.4-.6 1.5-.9 2.8-.4c1.3 .7 1.9 1.8 1.5 2.6c-.4 .9-1.7 1.1-2.8 .4z"/></svg></a>
-			  </p>
-			  <p>
-				<a href="mailto:arthurbressan789@gmail.com?subject=Contato%20via%20GitHub&body=Olá,%20Arthur!"><svg class="icon_footer"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zM218 271.7L64.2 172.4C66 156.4 79.5 144 96 144l256 0c16.5 0 30 12.4 31.8 28.4L230 271.7c-1.8 1.2-3.9 1.8-6 1.8s-4.2-.6-6-1.8zm29.4 26.9L384 210.4 384 336c0 17.7-14.3 32-32 32L96 368c-17.7 0-32-14.3-32-32l0-125.6 136.6 88.2c7 4.5 15.1 6.9 23.4 6.9s16.4-2.4 23.4-6.9z"/></svg></a>
-			  </p>
+				<p>
+					<a href="https://www.linkedin.com/in/arthur-bressan-silva/"
+						><svg
+							class="icon_footer"
+							xmlns="http://www.w3.org/2000/svg"
+							viewBox="0 0 448 512">
+							<!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+							<path
+								fill="#ffffff"
+								d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
+						</svg>
+					</a>
+				</p>
+				<p>
+					<a href="https://github.com/Arthur-Bressan"
+						><svg
+							class="icon_footer"
+							xmlns="http://www.w3.org/2000/svg"
+							viewBox="0 0 448 512">
+							<!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+							<path
+								fill="#ffffff"
+								d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM265.8 407.7c0-1.8 0-6 .1-11.6c.1-11.4 .1-28.8 .1-43.7c0-15.6-5.2-25.5-11.3-30.7c37-4.1 76-9.2 76-73.1c0-18.2-6.5-27.3-17.1-39c1.7-4.3 7.4-22-1.7-45c-13.9-4.3-45.7 17.9-45.7 17.9c-13.2-3.7-27.5-5.6-41.6-5.6s-28.4 1.9-41.6 5.6c0 0-31.8-22.2-45.7-17.9c-9.1 22.9-3.5 40.6-1.7 45c-10.6 11.7-15.6 20.8-15.6 39c0 63.6 37.3 69 74.3 73.1c-4.8 4.3-9.1 11.7-10.6 22.3c-9.5 4.3-33.8 11.7-48.3-13.9c-9.1-15.8-25.5-17.1-25.5-17.1c-16.2-.2-1.1 10.2-1.1 10.2c10.8 5 18.4 24.2 18.4 24.2c9.7 29.7 56.1 19.7 56.1 19.7c0 9 .1 21.7 .1 30.6c0 4.8 .1 8.6 .1 10c0 4.3-3 9.5-11.5 8C106 393.6 59.8 330.8 59.8 257.4c0-91.8 70.2-161.5 162-161.5s166.2 69.7 166.2 161.5c.1 73.4-44.7 136.3-110.7 158.3c-8.4 1.5-11.5-3.7-11.5-8zm-90.5-54.8c-.2-1.5 1.1-2.8 3-3.2c1.9-.2 3.7 .6 3.9 1.9c.3 1.3-1 2.6-3 3c-1.9 .4-3.7-.4-3.9-1.7zm-9.1 3.2c-2.2 .2-3.7-.9-3.7-2.4c0-1.3 1.5-2.4 3.5-2.4c1.9-.2 3.7 .9 3.7 2.4c0 1.3-1.5 2.4-3.5 2.4zm-14.3-2.2c-1.9-.4-3.2-1.9-2.8-3.2s2.4-1.9 4.1-1.5c2 .6 3.3 2.1 2.8 3.4c-.4 1.3-2.4 1.9-4.1 1.3zm-12.5-7.3c-1.5-1.3-1.9-3.2-.9-4.1c.9-1.1 2.8-.9 4.3 .6c1.3 1.3 1.8 3.3 .9 4.1c-.9 1.1-2.8 .9-4.3-.6zm-8.5-10c-1.1-1.5-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3c1.1 1.5 1.1 3.3 0 4.1c-.9 .6-2.6 0-3.7-1.5zm-6.3-8.8c-1.1-1.3-1.3-2.8-.4-3.5c.9-.9 2.4-.4 3.5 .6c1.1 1.3 1.3 2.8 .4 3.5c-.9 .9-2.4 .4-3.5-.6zm-6-6.4c-1.3-.6-1.9-1.7-1.5-2.6c.4-.6 1.5-.9 2.8-.4c1.3 .7 1.9 1.8 1.5 2.6c-.4 .9-1.7 1.1-2.8 .4z" />
+						</svg>
+					</a>
+				</p>
+				<p>
+					<a
+						href="mailto:arthurbressan789@gmail.com?subject=Contato%20via%20GitHub&body=Olá,%20Arthur!"
+						><svg
+							class="icon_footer"
+							xmlns="http://www.w3.org/2000/svg"
+							viewBox="0 0 448 512">
+							<!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+							<path
+								fill="#ffffff"
+								d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zM218 271.7L64.2 172.4C66 156.4 79.5 144 96 144l256 0c16.5 0 30 12.4 31.8 28.4L230 271.7c-1.8 1.2-3.9 1.8-6 1.8s-4.2-.6-6-1.8zm29.4 26.9L384 210.4 384 336c0 17.7-14.3 32-32 32L96 368c-17.7 0-32-14.3-32-32l0-125.6 136.6 88.2c7 4.5 15.1 6.9 23.4 6.9s16.4-2.4 23.4-6.9z" />
+						</svg>
+					</a>
+				</p>
 			</figure>
-			
+
 			<p>Arthur Bressan Silva</p>
 			<p>&copy; 2025 Blog CSS</p>
-	  
-		  </footer>
+		</footer>
 
 		<script src="script.js"></script>
 	</body>
