flex_bug_correction

--- a/flexbox.html
+++ b/flexbox.html
@@ -5,7 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>CSS Flexbox</title>
 		<link rel="stylesheet" href="styles.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 	</head>
 
 	<body>
@@ -31,30 +33,29 @@
 			</ul>
 		</nav>
 
-		<template id="popup_template_grid">
-			<div class="popup_code" id="popup_code_inner_grid">
-			  <div class="article_header">
-				<h2>Código para melhor visualização</h2>
-				<span class="close" onclick="close_popup_grid()">&times;</span>
-			  </div>
-			  <label id="example_title_grid"></label>
-			  <div class="popup_code_content">
-				<code class="language-css">
-				  <p>.grid-container {</p>
-				  <ul class="code-list" id="code_list_grid">
-					<!-- Itens serão adicionados via JS -->
-				  </ul>
-				  }
-				</code>
-			  </div>
-			  <p>
-				Este código é atualizado conforme você utiliza o exemplo interativo.
-			  </p>
+		<template id="popup_template">
+			<div class="popup_code" id="popup_code_inner">
+				<div class="article_header">
+					<h2>Código para melhor visualização</h2>
+					<span class="close" onclick="close_popup()">&times;</span>
+				</div>
+				<label id="example_title"></label>
+				<div class="popup_code_content">
+					<code class="language-css">
+						<p>.grid-container {</p>
+						<ul class="code-list" id="code_list">
+							<!-- Itens serão adicionados via JS -->
+						</ul>
+						}
+					</code>
+				</div>
+				<p>
+					Este código é atualizado conforme você utiliza o exemplo interativo.
+				</p>
 			</div>
-		  </template>
-		  
-		  <!-- Local onde o popup será exibido -->
-		  <div id="popup_code_container_grid"></div>
+		</template>
+
+		<div id="popup_code_container"></div>
 
 		<main>
 			<section>
@@ -133,7 +134,9 @@
 					<article>
 						<div class="article_header">
 							<h2>Exemplo de CSS flex-direction</h2>
-							<button onclick="open_popup('flexContainerDirection')"><i class="fa-solid fa-laptop-code" style="color: fff;"></i></button>
+							<button onclick="open_popup('flexContainerDirection')">
+								<i class="fa-solid fa-laptop-code" style="color: fff"></i>
+							</button>
 						</div>
 
 						<div class="flex-container" id="flexContainerDirection">
@@ -158,7 +161,9 @@
 					<article>
 						<div class="article_header">
 							<h2>Exemplo de CSS flex justify-content</h2>
-							<button onclick="open_popup('flexContainerJustify')"><i class="fa-solid fa-laptop-code" style="color: fff;"></i></button>
+							<button onclick="open_popup('flexContainerJustify')">
+								<i class="fa-solid fa-laptop-code" style="color: fff"></i>
+							</button>
 						</div>
 						<div class="flex-container-justify" id="flexContainerJustify">
 							<div class="flex-item-justify">Item 1</div>
@@ -188,7 +193,9 @@
 					<article>
 						<div class="article_header">
 							<h2>Exemplo de CSS align-items</h2>
-							<button onclick="open_popup('flexContainerAlign')"><i class="fa-solid fa-laptop-code" style="color: fff;"></i></button>
+							<button onclick="open_popup('flexContainerAlign')">
+								<i class="fa-solid fa-laptop-code" style="color: fff"></i>
+							</button>
 						</div>
 						<div class="flex-container-align" id="flexContainerAlign">
 							<div class="flex-item-align">Item 1</div>
@@ -210,7 +217,9 @@
 					<article>
 						<div class="article_header">
 							<h2>Exemplo Completo</h2>
-							<button onclick="open_popup('flexContainerComplete')"><i class="fa-solid fa-laptop-code" style="color: fff;"></i></button>
+							<button onclick="open_popup('flexContainerComplete')">
+								<i class="fa-solid fa-laptop-code" style="color: fff"></i>
+							</button>
 						</div>
 						<div class="flex-container" id="flexContainerComplete">
 							<div class="flex-item-justify">1</div>
@@ -227,7 +236,9 @@
 							<select id="flexDirectionComp">
 								<option value="row">Linha (row)</option>
 								<option value="column">Coluna (column)</option>
-								<option value="row-reverse">Linha Invertida (row-reverse)</option>
+								<option value="row-reverse">
+									Linha Invertida (row-reverse)
+								</option>
 								<option value="column-reverse">
 									Coluna Invertida (column-reverse)
 								</option>
@@ -235,7 +246,9 @@
 
 							<select id="justifyContentComp">
 								<option value="center">Centro da Flexbox (center)</option>
-								<option value="flex-start">Começo da Flexbox (flex-start)</option>
+								<option value="flex-start">
+									Começo da Flexbox (flex-start)
+								</option>
 								<option value="flex-end">Fim da Flexbox (flex-end)</option>
 								<option value="space-between">
 									Espaço entre (space-between)
@@ -277,7 +290,8 @@
 							<!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
 							<path
 								fill="#ffffff"
-								d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" /></svg>
+								d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
+						</svg>
 					</a>
 				</p>
 				<p>
@@ -289,8 +303,9 @@
 							<!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
 							<path
 								fill="#ffffff"
-								d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM265.8 407.7c0-1.8 0-6 .1-11.6c.1-11.4 .1-28.8 .1-43.7c0-15.6-5.2-25.5-11.3-30.7c37-4.1 76-9.2 76-73.1c0-18.2-6.5-27.3-17.1-39c1.7-4.3 7.4-22-1.7-45c-13.9-4.3-45.7 17.9-45.7 17.9c-13.2-3.7-27.5-5.6-41.6-5.6s-28.4 1.9-41.6 5.6c0 0-31.8-22.2-45.7-17.9c-9.1 22.9-3.5 40.6-1.7 45c-10.6 11.7-15.6 20.8-15.6 39c0 63.6 37.3 69 74.3 73.1c-4.8 4.3-9.1 11.7-10.6 22.3c-9.5 4.3-33.8 11.7-48.3-13.9c-9.1-15.8-25.5-17.1-25.5-17.1c-16.2-.2-1.1 10.2-1.1 10.2c10.8 5 18.4 24.2 18.4 24.2c9.7 29.7 56.1 19.7 56.1 19.7c0 9 .1 21.7 .1 30.6c0 4.8 .1 8.6 .1 10c0 4.3-3 9.5-11.5 8C106 393.6 59.8 330.8 59.8 257.4c0-91.8 70.2-161.5 162-161.5s166.2 69.7 166.2 161.5c.1 73.4-44.7 136.3-110.7 158.3c-8.4 1.5-11.5-3.7-11.5-8zm-90.5-54.8c-.2-1.5 1.1-2.8 3-3.2c1.9-.2 3.7 .6 3.9 1.9c.3 1.3-1 2.6-3 3c-1.9 .4-3.7-.4-3.9-1.7zm-9.1 3.2c-2.2 .2-3.7-.9-3.7-2.4c0-1.3 1.5-2.4 3.5-2.4c1.9-.2 3.7 .9 3.7 2.4c0 1.3-1.5 2.4-3.5 2.4zm-14.3-2.2c-1.9-.4-3.2-1.9-2.8-3.2s2.4-1.9 4.1-1.5c2 .6 3.3 2.1 2.8 3.4c-.4 1.3-2.4 1.9-4.1 1.3zm-12.5-7.3c-1.5-1.3-1.9-3.2-.9-4.1c.9-1.1 2.8-.9 4.3 .6c1.3 1.3 1.8 3.3 .9 4.1c-.9 1.1-2.8 .9-4.3-.6zm-8.5-10c-1.1-1.5-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3c1.1 1.5 1.1 3.3 0 4.1c-.9 .6-2.6 0-3.7-1.5zm-6.3-8.8c-1.1-1.3-1.3-2.8-.4-3.5c.9-.9 2.4-.4 3.5 .6c1.1 1.3 1.3 2.8 .4 3.5c-.9 .9-2.4 .4-3.5-.6zm-6-6.4c-1.3-.6-1.9-1.7-1.5-2.6c.4-.6 1.5-.9 2.8-.4c1.3 .7 1.9 1.8 1.5 2.6c-.4 .9-1.7 1.1-2.8 .4z" /></svg>
-							</a>
+								d="M448 96c0-35.3-28.7-64-64-64H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V96zM265.8 407.7c0-1.8 0-6 .1-11.6c.1-11.4 .1-28.8 .1-43.7c0-15.6-5.2-25.5-11.3-30.7c37-4.1 76-9.2 76-73.1c0-18.2-6.5-27.3-17.1-39c1.7-4.3 7.4-22-1.7-45c-13.9-4.3-45.7 17.9-45.7 17.9c-13.2-3.7-27.5-5.6-41.6-5.6s-28.4 1.9-41.6 5.6c0 0-31.8-22.2-45.7-17.9c-9.1 22.9-3.5 40.6-1.7 45c-10.6 11.7-15.6 20.8-15.6 39c0 63.6 37.3 69 74.3 73.1c-4.8 4.3-9.1 11.7-10.6 22.3c-9.5 4.3-33.8 11.7-48.3-13.9c-9.1-15.8-25.5-17.1-25.5-17.1c-16.2-.2-1.1 10.2-1.1 10.2c10.8 5 18.4 24.2 18.4 24.2c9.7 29.7 56.1 19.7 56.1 19.7c0 9 .1 21.7 .1 30.6c0 4.8 .1 8.6 .1 10c0 4.3-3 9.5-11.5 8C106 393.6 59.8 330.8 59.8 257.4c0-91.8 70.2-161.5 162-161.5s166.2 69.7 166.2 161.5c.1 73.4-44.7 136.3-110.7 158.3c-8.4 1.5-11.5-3.7-11.5-8zm-90.5-54.8c-.2-1.5 1.1-2.8 3-3.2c1.9-.2 3.7 .6 3.9 1.9c.3 1.3-1 2.6-3 3c-1.9 .4-3.7-.4-3.9-1.7zm-9.1 3.2c-2.2 .2-3.7-.9-3.7-2.4c0-1.3 1.5-2.4 3.5-2.4c1.9-.2 3.7 .9 3.7 2.4c0 1.3-1.5 2.4-3.5 2.4zm-14.3-2.2c-1.9-.4-3.2-1.9-2.8-3.2s2.4-1.9 4.1-1.5c2 .6 3.3 2.1 2.8 3.4c-.4 1.3-2.4 1.9-4.1 1.3zm-12.5-7.3c-1.5-1.3-1.9-3.2-.9-4.1c.9-1.1 2.8-.9 4.3 .6c1.3 1.3 1.8 3.3 .9 4.1c-.9 1.1-2.8 .9-4.3-.6zm-8.5-10c-1.1-1.5-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3c1.1 1.5 1.1 3.3 0 4.1c-.9 .6-2.6 0-3.7-1.5zm-6.3-8.8c-1.1-1.3-1.3-2.8-.4-3.5c.9-.9 2.4-.4 3.5 .6c1.1 1.3 1.3 2.8 .4 3.5c-.9 .9-2.4 .4-3.5-.6zm-6-6.4c-1.3-.6-1.9-1.7-1.5-2.6c.4-.6 1.5-.9 2.8-.4c1.3 .7 1.9 1.8 1.5 2.6c-.4 .9-1.7 1.1-2.8 .4z" />
+						</svg>
+					</a>
 				</p>
 				<p>
 					<a
@@ -302,7 +317,8 @@
 							<!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
 							<path
 								fill="#ffffff"
-								d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zM218 271.7L64.2 172.4C66 156.4 79.5 144 96 144l256 0c16.5 0 30 12.4 31.8 28.4L230 271.7c-1.8 1.2-3.9 1.8-6 1.8s-4.2-.6-6-1.8zm29.4 26.9L384 210.4 384 336c0 17.7-14.3 32-32 32L96 368c-17.7 0-32-14.3-32-32l0-125.6 136.6 88.2c7 4.5 15.1 6.9 23.4 6.9s16.4-2.4 23.4-6.9z" /></svg>
+								d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zM218 271.7L64.2 172.4C66 156.4 79.5 144 96 144l256 0c16.5 0 30 12.4 31.8 28.4L230 271.7c-1.8 1.2-3.9 1.8-6 1.8s-4.2-.6-6-1.8zm29.4 26.9L384 210.4 384 336c0 17.7-14.3 32-32 32L96 368c-17.7 0-32-14.3-32-32l0-125.6 136.6 88.2c7 4.5 15.1 6.9 23.4 6.9s16.4-2.4 23.4-6.9z" />
+						</svg>
 					</a>
 				</p>
 			</figure>
