--- a/flexbox.html
+++ b/flexbox.html
@@ -23,10 +23,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
+						<a class="nav-link active" aria-current="page" href="index.html">Página inicial</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -70,38 +67,47 @@
 						</ul>
 					</li>
 				</ul>
-				<form class="d-flex" role="search">
-					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-					<button class="btn btn-outline-success" type="submit">Search</button>
-				</form>
 			</div>
 		</div>
 	</nav>
 
-	<template id="popup_template">
-		<div class="popup_code" id="popup_code_inner">
-			<div class="article_header">
-				<h2>Código para melhor visualização</h2>
-				<span class="close" onclick="close_popup()">&times;</span>
-			</div>
-			<label id="example_title"></label>
-			<div class="popup_code_content">
-				<div id="overlay_flex" class="overlay"></div>
-				<code class="language-css">
-						<p>.flex-container {</p>
-						<ul class="code-list" id="code_list">
-							<!-- Itens serão adicionados via JS -->
-						</ul>
-						}
-					</code>
-			</div>
-			<p>
-				Este código é atualizado conforme você utiliza o exemplo interativo.
-			</p>
-		</div>
-	</template>
+	<!-- Botão para abrir o modal (invisível, será disparado via JS) -->
+	<button id="openBootstrapModalBtn" type="button" class="btn btn-primary d-none" data-bs-toggle="modal"
+		data-bs-target="#flexCodeModal">
+		Abrir Modal
+	</button>
 
-	<div id="popup_code_container"></div>
+	<!-- Modal Bootstrap 5 para exibir código (tema escuro customizado) -->
+	<div class="modal fade" id="flexCodeModal" tabindex="-1" aria-labelledby="flexCodeModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content bg-dark text-white"
+				style="background-color: #1e293b !important; color: #fff !important;">
+				<div class="modal-header border-0" style="background-color: #1e293b;">
+					<h5 class="modal-title" id="flexCodeModalLabel">Código para melhor visualização</h5>
+					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Fechar">
+					</button>
+				</div>
+				<div class="modal-body">
+					<label id="example_title"></label>
+					<div class="popup_code_content">
+						<code class="language-css">
+							<p>.flex-container {</p>
+							<ul class="code-list" id="code_list">
+								<!-- Itens serão adicionados via JS -->
+							</ul>
+							<p>}</p>
+						</code>
+					</div>
+					<p>
+						Este código é atualizado conforme você utiliza o exemplo interativo.
+					</p>
+				</div>
+				<div class="modal-footer border-0" style="background-color: #1e293b;">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<main>
 		<section>
